--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,31 @@ body {
 	background: #f6f5fa;
 }
 
+#outer-layer {
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 @layer components {
 	.btn-primary {
-		@apply bg-[#1428A0] text-white rounded-lg hover:shadow-lg;
+		@apply bg-[#1428A0] text-white rounded-lg hover:shadow-lg cursor-pointer;
 	}
 
 	.btn-delete {
-		@apply bg-[#FE4236] text-white rounded-lg hover:shadow-lg;
+		@apply bg-[#FE4236] text-white rounded-lg hover:shadow-lg cursor-pointer;
 	}
 
 	.form-item {
-		@apply shadow border rounded-lg text-gray-700 leading-tight focus:outline;
+		@apply bg-white shadow border rounded-lg text-gray-700 leading-tight focus:outline;
+	}
+
+	.bg-primary {
+		background: #f6f5fa;
 	}
 }
