--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@ body {
 	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	display: flex;
 	justify-content: center;
